<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginTop="40dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:text="@string/log_out" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/userImageP"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/userimage"
        android:focusable="true"
        android:src="@drawable/image" />

    <EditText
        android:id="@+id/editNameP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editPhoneP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_phone"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/update"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/update_profile" />

    <ProgressBar
        android:id="@+id/progressBarUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />


</androidx.appcompat.widget.LinearLayoutCompat>